--- a/package.json
+++ b/package.json
@@ -91,5 +91,44 @@
     "_stream_duplex": "./builtin/_stream_duplex.js",
     "_stream_transform": "./builtin/_stream_transform.js",
     "_stream_passthrough": "./builtin/_stream_passthrough.js"
+  },
+  "globalBrowser": {
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "crypto-browserify",
+    "http": "http-browserify",
+    "buffer": "buffer",
+    "os": "os-browserify",
+    "vm": "vm-browserify",
+    "zlib": "zlib-browserify",
+    "assert": "assert",
+    "child_process": "./builtin/child_process.js",
+    "cluster": "./builtin/cluster.js",
+    "dgram": "./builtin/dgram.js",
+    "dns": "./builtin/dns.js",
+    "domain": "domain-browser",
+    "events": "events",
+    "fs": "./builtin/fs.js",
+    "https": "https-browserify",
+    "module": "./builtin/module.js",
+    "net": "./builtin/net.js",
+    "path": "path-browserify",
+    "process": "process",
+    "querystring": "./builtin/querystring.js",
+    "readline": "./builtin/readline.js",
+    "repl": "./builtin/repl.js",
+    "stream": "./builtin/stream.js",
+    "string_decoder": "string_decoder",
+    "sys": "./builtin/sys.js",
+    "timers": "./builtin/timers.js",
+    "tls": "./builtin/tls.js",
+    "tty": "tty-browserify",
+    "url": "./builtin/url.js",
+    "util": "./builtin/util.js",
+    "_stream_readable": "./builtin/_stream_readable.js",
+    "_stream_writable": "./builtin/_stream_writable.js",
+    "_stream_duplex": "./builtin/_stream_duplex.js",
+    "_stream_transform": "./builtin/_stream_transform.js",
+    "_stream_passthrough": "./builtin/_stream_passthrough.js"
   }
 }
